chore: reorganize to support multiple versions
Signed-off-by: Manfred Touron <94029+moul@users.noreply.github.com>

--- a/asset/index.html
+++ b/asset/index.html
@@ -1,24 +1,12 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Music Paint</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <canvas class="whiteboard" ></canvas>
-
-  <div class="colors">
-    <div class="color black"></div>
-    <div class="color red"></div>
-    <div class="color green"></div>
-    <div class="color blue"></div>
-    <div class="color yellow"></div>
-  </div>
-
-  <!--<script src="/socket.io/socket.io.js"></script>-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-  <script src="/main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Music Paint</title>
+    </head>
+    <body>
+        <ul>
+            <li><a href="/v1/">V1</a></li>
+        </ul>
+    </body>
 </html>
